# Search-System

search sysytem/part 1/: CMakeLists.txt  main.cpp  search_server.cpp  search_server.h
search sysytem/part 2 with concurrency/: CMakeLists.txt  search_server.cpp  search_server.h
